--- a/Example/GamePluginIOS/Main.storyboard
+++ b/Example/GamePluginIOS/Main.storyboard
@@ -293,6 +293,33 @@
                                             <action selector="postNotification:" destination="whP-gf-Uak" eventType="touchUpInside" id="TQ8-nu-EeY"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="shu-29-avt">
+                                        <rect key="frame" x="16" y="521" width="108" height="30"/>
+                                        <state key="normal" title="ShowImgDialog">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="showImgDialog:" destination="whP-gf-Uak" eventType="touchUpInside" id="Bzt-O6-vyg"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="exE-A9-cHe">
+                                        <rect key="frame" x="174" y="27" width="143" height="30"/>
+                                        <state key="normal" title="ShowProgressDialog">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="showProgressDialog:" destination="whP-gf-Uak" eventType="touchUpInside" id="FvT-dy-uU1"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O4t-3n-z08">
+                                        <rect key="frame" x="181" y="65" width="136" height="30"/>
+                                        <state key="normal" title="HideProgressDialog">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="hideProgressDialog:" destination="whP-gf-Uak" eventType="touchUpInside" id="TjV-CF-eWY"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
