--- a/Example/GamePluginIOS/Main.storyboard
+++ b/Example/GamePluginIOS/Main.storyboard
@@ -414,6 +414,34 @@
                                             <action selector="gcAchievement:" destination="whP-gf-Uak" eventType="touchUpInside" id="G93-H2-VaZ"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bEX-Ou-lqW">
+                                        <rect key="frame" x="258" y="273" width="58" height="30"/>
+                                        <state key="normal" title="GcReset"/>
+                                        <connections>
+                                            <action selector="gcReset:" destination="whP-gf-Uak" eventType="touchUpInside" id="Iw1-4p-0PD"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dBu-tL-K3z">
+                                        <rect key="frame" x="16" y="291" width="55" height="30"/>
+                                        <state key="normal" title="Virbrate"/>
+                                        <connections>
+                                            <action selector="virbrate:" destination="whP-gf-Uak" eventType="touchUpInside" id="yjj-uM-4NA"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rGf-65-Yi5">
+                                        <rect key="frame" x="16" y="309" width="88" height="30"/>
+                                        <state key="normal" title="GetInputText"/>
+                                        <connections>
+                                            <action selector="getInputText:" destination="whP-gf-Uak" eventType="touchUpInside" id="DoR-2U-PYV"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o1q-px-dww">
+                                        <rect key="frame" x="16" y="329" width="75" height="30"/>
+                                        <state key="normal" title="ShowToast"/>
+                                        <connections>
+                                            <action selector="showToast:" destination="whP-gf-Uak" eventType="touchUpInside" id="H92-af-k16"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
